--- a/docs/README_check_russian.adoc
+++ b/docs/README_check_russian.adoc
@@ -48,23 +48,23 @@ include::partials/run.adoc[]
 ----
 Использование:
 {name} {script-name}
--d/--dir DIR | -f/--file FILE ... FILE | --recursive | --verbose | --keep-logs | --h/--help
+-d/--dir DIR | -f/--file FILE ... FILE | --verbose | --recursive | --keep-logs | --h/--help
 
   Команда для проверки наличия непереведенных слов
 
 Опции:
   -d, --dir DIR                          Директория для обработки
-  -f, --file FILE ... FILE               Перечень файлов для обработки.
-                                         Может использоваться несколько раз
-  --recursive / --no-recursive           Флаг рекурсивного поиска файлов.
-                                         По умолчанию: True, поиск файлов по вложенным папкам
+  -f, --file FILE ... FILE               Файл для обработки. Может использоваться несколько раз
   --verbose / --no-verbose               Флаг подробного вывода.
                                          По умолчанию: False, выводятся только ошибки
-  --keep-logs                            Флаг сохранения директории с лог-файлом по завершении
-                                         работы в штатном режиме.
-                                         По умолчанию: False, лог-файл и директория удаляются
-  -h, --help                             Вывести справочную информацию на экран и завершить работу
-----------------------------------------------------------------------------------------------------
+  {recursive}
+                                         {recursive-note}
+  {keep-logs}
+                                         {keep-logs-cont}
+                                         {keep-logs-default}
+  {help}
+                                         {help-cont}
+-------------------------------------------------------------------------------------------------
 ----
 
 NOTE: При указании директории в ней выбираются файлы, в которых присутствует постфикс `.en`.
