--- a/docs/README_convert_tables.adoc
+++ b/docs/README_convert_tables.adoc
@@ -1,20 +1,12 @@
 [[convert-tables]]
 = Руководство для convert-tables
-:experimental:
-:icons: font
-:source-highlighter: rouge
 :imagesdir: images
-:figure-caption: Рисунок
 :stylesdir: ../css
 :stylesheet: default.css
-:nofooter:
-:toc: auto
-:toc-title: Содержание
-:sectnums:
 :pdf-themesdir: themes
 :pdf-theme: base-theme.yml
-:name: tw_utilities.exe
 :script-name: convert-tables
+:asciidoctorconfigdir: ..
 
 == Описание
 
@@ -33,7 +25,7 @@ include::partials/run.adoc[]
 [source,console,subs="attributes+"]
 ----
 Использование:
-{name} {script-name} DOCX_FILE
+{name} {script-name} <DOCX_FILE>
 -p/--parse DIR_TABLES | -t/--temp TEMP_DIR | -e/--escape | -r/--remove | -f/--fix | -k/--keep |
 --keep-logs | --h/--help
 
@@ -43,32 +35,33 @@ include::partials/run.adoc[]
   docx_file                              Путь до файла Word в формате *.docx или *.docm
 
 Опции:
-  -p, --parse DIR_TABLES                 Директория для хранения таблиц. По умолчанию: ./tables/.
+  -p, --parse DIR_TABLES                 Директория для таблиц. По умолчанию: ./tables/.
                                          Если не существует, то будет создана
-  -t, --temp TEMP_DIR                    Временная директория для скрипта. По умолчанию: ./_temp/.
+  -t, --temp TEMP_DIR                    Временная директория. По умолчанию: ./_temp/.
                                          Если не существует, то будет создана
   -e, --escape / --no-escape             Флаг экранирования символов '<', '>'.
                                          По умолчанию: True, добавление '\' перед символами
   -r, --remove / --no-remove             Флаг удаления всех множественных пробелов и пробелов
                                          перед знаками препинания.
-                                         По умолчанию: True, удаление всех дополнительных пробелов
+                                         По умолчанию: True, удаление всех лишних пробелов
   -f, --fix / --no-fix                   Флаг удаления лишних пробелов и экранирования символов.
-                                         По умолчанию: не задано, обработка определяется параметрами
-                                         --preserve и --escape.
-                                         Имеет приоритет выше, чем у опций --preserve и --escape.
-                                         Примечание. Аргумент не может использоваться одновременно с
+                                         По умолчанию: не задано, определяется параметрами
+                                         --escape и --remove.
+                                         Приоритет выше, чем у опций --escape и --remove.
+                                         Примечание. Не может использоваться одновременно с
                                          --keep
   -k, --keep / --no-keep                 Флаг извлечения текста без дополнительной обработки.
-                                         По умолчанию: не задано, обработка определяется параметрами
-                                         --preserve и --escape.
-                                         Имеет приоритет выше, чем у опций --preserve и --escape.
-                                         Примечание. Аргумент не может использоваться одновременно с
+                                         По умолчанию: не задано, определяется параметрами
+                                         --escape и --remove.
+                                         Приоритет выше, чем у опций --escape и --remove.
+                                         Примечание. Не может использоваться одновременно с
                                          --fix
-  --keep-logs                            Флаг сохранения директории с лог-файлом по завершении
-                                         работы в штатном режиме.
-                                         По умолчанию: False, лог-файл и директория удаляются
-  -h, --help                             Вывести справочную информацию на экран и завершить работу
-----------------------------------------------------------------------------------------------------
+  {keep-logs}
+                                         {keep-logs-cont}
+                                         {keep-logs-default}
+  {help}
+                                         {help-cont}
+-------------------------------------------------------------------------------------------------
 ----
 
 NOTE: Путь может быть как абсолютным, так и относительным.
