--- a/docs/README_format_code.adoc
+++ b/docs/README_format_code.adoc
@@ -1,20 +1,12 @@
 [[format-code]]
 = Руководство для format-code
-:experimental:
-:icons: font
-:source-highlighter: rouge
 :imagesdir: images
-:figure-caption: Рисунок
 :stylesdir: ../css
 :stylesheet: default.css
-:nofooter:
-:toc: auto
-:toc-title: Содержание
-:sectnums:
 :pdf-themesdir: themes
 :pdf-theme: base-theme.yml
 :script-name: format-code
-:name: tw_utilities.exe
+:asciidoctorconfigdir: ..
 
 == Описание
 
@@ -46,17 +38,17 @@ include::partials/run.adoc[]
 
 Опции:
   -d, --dir DIR                          Директория для обработки
-  -f, --file FILE ... FILE               Перечень файлов для обработки.
-                                         Может использоваться несколько раз
+  -f, --file FILE ... FILE               Файлов для обработки. Может использоваться несколько раз
   -l, --length LEN                       Максимальная длина строки. По умолчанию: 84
                                          Примечание. Должно быть целым положительным числом
-  --recursive / --no-recursive           Флаг рекурсивного поиска файлов.
-                                         По умолчанию: True, поиск файлов по вложенным папкам
-  --keep-logs                            Флаг сохранения директории с лог-файлом по завершении
-                                         работы в штатном режиме.
-                                         По умолчанию: False, лог-файл и директория удаляются
-  -h, --help                             Вывести справочную информацию на экран и завершить работу
-----------------------------------------------------------------------------------------------------
+  {recursive}
+                                         {recursive-note}
+  {keep-logs}
+                                         {keep-logs-cont}
+                                         {keep-logs-default}
+  {help}
+                                         {help-cont}
+-------------------------------------------------------------------------------------------------
 ----
 
 NOTE: Путь может быть как абсолютным, так и относительным.
