--- a/docs/README_link_repair.adoc
+++ b/docs/README_link_repair.adoc
@@ -1,20 +1,12 @@
 [[link-repair]]
 = Руководство для link-repair
-:experimental:
-:icons: font
-:source-highlighter: rouge
 :imagesdir: images
-:figure-caption: Рисунок
 :stylesdir: ../css
 :stylesheet: default.css
-:nofooter:
-:toc: auto
-:toc-title: Содержание
-:sectnums:
 :pdf-themesdir: themes
 :pdf-theme: base-theme.yml
-:name: tw_utilities.exe
 :script-name: link-repair
+:asciidoctorconfigdir: ..
 
 == Описание
 
@@ -32,7 +24,7 @@ include::partials/run.adoc[]
 [source,console,subs="attributes+"]
 ----
 Использование:
-{name} {script-name} PATHDIR
+{name} {script-name} <PATHDIR>
 -a/--anchor-disable | -d/--dry-run | -n/--no-result | -s/--separate | --skip-en | --keep-logs |
 --h/--help
 
@@ -43,22 +35,24 @@ include::partials/run.adoc[]
 
 Опции:
   -a, --anchor-disable                   Флаг поиска повторяющихся якорей.
-                                         По умолчанию: True, поиск дублирующихся якорей осуществляется
-  -d, --dry-run                          Флаг вывода некорректных ссылок на экран без изменения файлов.
+                                         По умолчанию: True, дублирующийся якори обрабатываются
+  -d, --dry-run                          Флаг вывода некорректных ссылок на экран без изменения
+                                         файлов.
                                          По умолчанию: False, файлы перезаписываются
-  -n, --no-result                        Флаг удаления файла с результатами работы скрипта по завершении
-                                         работы в штатном режиме.
+  -n, --no-result                        Флаг удаления файла с результатами работы скрипта по
+                                         завершении работы в штатном режиме.
                                          По умолчанию: False, файл сохраняется
   -s, --separate                         Флаг раздельной обработки файлов на различных языках.
-                                         По умолчанию: True, файлы на русском и английском
-                                         обрабатываются отдельно
+                                         По умолчанию: True, файлы обрабатываются отдельно
   --skip-en                              Флаг обработки файлов только на русском языке.
-                                         По умолчанию: False, обрабатываются файлы на обоих языках
-  --keep-logs                            Флаг сохранения директории с лог-файлом по завершении работы
-                                         в штатном режиме.
-                                         По умолчанию: False, лог-файл и директория удаляются
-  -h, --help                             Вывести справочную информацию на экран и завершить работу
-----------------------------------------------------------------------------------------------------
+                                         По умолчанию: False, обрабатываются файлы на обоих
+                                         языках
+  {keep-logs}
+                                         {keep-logs-cont}
+                                         {keep-logs-default}
+  {help}
+                                         {help-cont}
+-------------------------------------------------------------------------------------------------
 ----
 
 NOTE: Путь может быть как абсолютным, так и относительным.
