--- a/docs/README_list_files.adoc
+++ b/docs/README_list_files.adoc
@@ -1,20 +1,12 @@
 [[list-files]]
 = Руководство для list-files
-:experimental:
-:icons: font
-:source-highlighter: rouge
 :imagesdir: images
-:figure-caption: Рисунок
 :stylesdir: ../css
 :stylesheet: default.css
-:nofooter:
-:toc: auto
-:toc-title: Содержание
-:sectnums:
 :pdf-themesdir: themes
 :pdf-theme: base-theme.yml
 :script-name: list-files
-:name: tw_utilities.exe
+:asciidoctorconfigdir: ..
 
 == Описание
 
@@ -59,12 +51,11 @@ include::partials/run.adoc[]
 [source,console,subs="attributes+"]
 ----
 Использование:
-{name} {script-name} ROOT_DIR
-Использование:
-tw_utilities.exe list-files <ROOT_DIR>
+{name} {script-name} <ROOT_DIR>
 -d/--ignored-dirs DIR ... DIR | --all-dirs | -f/--ignored-files FILE ... FILE | --all-files |
--e/--extensions "EXT ... EXT" | --all-ext | -l/--language LANG | --all-langs | -i/--ignore-index |
--p/--prefix PFX | --hidden | --recursive | --keep-logs | --h/--help
+-e/--extensions "EXT ... EXT" | --all-ext | -l/--language LANG | --all-langs |
+-i/--ignore-index | -p/--prefix PFX | -n/--no-prefix | --hidden | --recursive | --keep-logs |
+--h/--help
 
   Команда для вывода файлов в директории
 
@@ -75,49 +66,59 @@ tw_utilities.exe list-files <ROOT_DIR>
   -d, --ignored-dirs DIR ... DIR         Перечень игнорируемых директорий. Может использоваться
                                          несколько раз.
                                          По умолчанию: _temp_folder, _temp_storage, private.
-                                         Примечание. Аргумент не может использоваться одновременно с
+                                         Примечание. Не может использоваться одновременно с
                                          --all-dirs
   --all-dirs BOOLEAN                     Флаг обработки всех директорий. По умолчанию: False.
-                                         Примечание. Аргумент не может использоваться одновременно с
+                                         Примечание. Не может использоваться одновременно с
                                          --ignored-dirs
-  -f, --ignored-files FILE ... FILE      Перечень игнорируемых файлов. Может использоваться несколько
-                                         раз.
+  -f, --ignored-files FILE ... FILE      Перечень игнорируемых файлов. Может использоваться
+                                         несколько раз.
                                          По умолчанию: README, _check_list.
-                                         Примечание. Аргумент не может использоваться одновременно с
+                                         Примечание. Не может использоваться одновременно с
                                          --all-files
   --all-files BOOLEAN                    Флаг обработки всех файлов.
-                                         По умолчанию: False, выводятся файлы с определенными именами.
-                                         Примечание. Аргумент не может использоваться одновременно с
+                                         По умолчанию: False, выводятся файлы только
+                                         с определенными именами.
+                                         Примечание. Не может использоваться одновременно с
                                          --ignored-files
   -e, --extensions "EXT ... EXT"         Обрабатываемые типы файлов, разделяемые пробелом.
                                          По умолчанию: md adoc.
-                                         Примечание. Аргумент не может использоваться одновременно с
+                                         Примечание. Не может использоваться одновременно с
                                          --all-extensions
   --all-ext BOOLEAN                      Флаг обработки файлов всех расширений.
-                                         По умолчанию: False, вывод файлов определенных расширений.
-                                         Примечание. Аргумент не может использоваться одновременно с
+                                         По умолчанию: False, выводятся файлы только
+                                         с определенными расширениями.
+                                         Примечание. Не может использоваться одновременно с
                                          --extensions
   -l, --language LANG                    Язык файлов.
-                                         По умолчанию: "", вывод всех файлов независимо от языка.
-                                         Примечание. Аргумент не может использоваться одновременно с
+                                         По умолчанию: "", выводятся файлы на всех языках.
+                                         Примечание. Не может использоваться одновременно с
                                          --all-languages
   --all-langs BOOLEAN                    Флаг обработки файлов всех языков.
-                                         По умолчанию: True, вывод файлов на всех языках.
-                                         Примечание. Аргумент не может использоваться одновременно с
+                                         По умолчанию: True, выводятся файлы на всех языках.
+                                         Примечание. Не может использоваться одновременно с
                                          --language
   -i, --ignore-index                     Флаг игнорирования файлов _index любого расширения.
                                          По умолчанию: False, файл включается в список
   -p, --prefix PFX                       Префикс, добавляемый к названиям файлов.
-                                         По умолчанию: '- content/common/'
+                                         По умолчанию: если в пути есть 'content' и 'common',
+                                         то путь, пригодный для добавления в YAML-файл для PDF;
+                                         иначе -- ''.
+                                         Примечание. Если задано --no-prefix, то игнорируется
+  -n, --no-prefix                        Флаг вывода исключительно относительных путей до файлов
+                                         без префиксов.
+                                         По умолчанию: False, префикс задается опцией --prefix.
+                                         Примечание. Имеет приоритет над опцией --prefix
   --hidden                               Флаг поиска скрытых файлов.
-                                         По умолчанию: False, исключение скрытых файлов из вывода
-  --recursive / --no-recursive           Флаг рекурсивного поиска файлов.
-                                         По умолчанию: True, поиск файлов по вложенным папкам
-  --keep-logs                            Флаг сохранения директории с лог-файлом по завершении
-                                         работы в штатном режиме.
-                                         По умолчанию: False, лог-файл и директория удаляются
-  -h, --help                             Вывести справочную информацию на экран и завершить работу
-----------------------------------------------------------------------------------------------------
+                                         По умолчанию: False, скрытые файлы игнорируются
+  {recursive}
+                                         {recursive-note}
+  {keep-logs}
+                                         {keep-logs-cont}
+                                         {keep-logs-default}
+  {help}
+                                         {help-cont}
+-------------------------------------------------------------------------------------------------
 ----
 
 NOTE: Путь может быть как абсолютным, так и относительным.
