--- a/docs/README_check_russian.adoc
+++ b/docs/README_check_russian.adoc
@@ -1,20 +1,12 @@
 [[check-russian]]
 = Руководство для check-russian
-:experimental:
-:icons: font
-:source-highlighter: rouge
 :imagesdir: images
-:figure-caption: Рисунок
 :stylesdir: ../css
 :stylesheet: default.css
-:nofooter:
-:toc: auto
 :toc-title: Содержание
-:sectnums:
 :pdf-themesdir: themes
 :pdf-theme: base-theme.yml
-:name: tw_utilities.exe
-:script-name: check-russian
+:asciidoctorconfigdir: ../
 
 == Описание
 
@@ -30,11 +22,9 @@
 * `path to file` -- путь до файла;
 * `line no` -- номер строки в файле, где найдены кириллические символы.
 
-include::partials/no_russian_sample.adoc[]
-
 Поскольку в выводе возможно много строк, то для удобства ориентирования в нем используется интуитивная цветовая индикация.
 
-CAUTION: Скрипт не показывает непереведенные слова или подмены схожих букв, это остается делом пользователя, а указывает лишь на файлы и строки, где это обнаружено.
+CAUTION: Скрипт не показывает непереведенные слова или подмены схожих букв, это остается делом пользователя, а указывает лишь на файлы, строки и символы.
 
 == Для чего нужно?
 
@@ -57,16 +47,20 @@ include::partials/run.adoc[]
   -f, --file FILE ... FILE               Файл для обработки. Может использоваться несколько раз
   --verbose / --no-verbose               Флаг подробного вывода.
                                          По умолчанию: False, выводятся только ошибки
-  {recursive}
-                                         {recursive-note}
-  {keep-logs}
-                                         {keep-logs-cont}
-                                         {keep-logs-default}
-  {help}
-                                         {help-cont}
--------------------------------------------------------------------------------------------------
+  --recursive / --no-recursive           Флаг рекурсивного поиска файлов.
+                                         По умолчанию: True, вложенные файлы учитываются
+  --keep-logs                            Флаг сохранения директории с лог-файлом по завершении
+                                         работы в штатном режиме.
+                                         По умолчанию: False, лог-файл и директория удаляются
+  -h, --help                             Вывести справочную информацию на экран и завершить
+                                         работу
+------------------------------------------------------------------------------------------------
 ----
 
 NOTE: При указании директории в ней выбираются файлы, в которых присутствует постфикс `.en`.
 
 NOTE: Путь может быть как абсолютным, так и относительным.
+
+=== Пример
+
+include::partials/check-russian.adoc[]
