--- a/docs/README_link_repair.adoc
+++ b/docs/README_link_repair.adoc
@@ -240,7 +240,7 @@ NOTE: Отображается только при отсутствии опци
 
 NOTE: Отображается только при использовании опции `-d`/`--dry-run`.
 
-== Некоторые особенности работы
+=== Некоторые особенности работы
 
 * Проверяются только Markdown- и AsciiDoc-файлы, все остальные (+*+.txt, без расширения, ...) игнорируются.
 * При использовании в операционной системе Windows скрипт должен располагаться на том же диске (томе), что и директория, для которой он используется.
@@ -248,3 +248,7 @@ NOTE: Отображается только при использовании о
 * Ссылки, которые указывают на файлы, находящиеся не в заданной директории, помечаются как некорректные.
 * Ссылки, начинающиеся с `http`, `mailto` и `/` игнорируются.
 * Нумерация строк начинается с 0.
+
+=== Примеры
+
+include::partials/link-repair.adoc[]
