--- a/docs/README_table_cols.adoc
+++ b/docs/README_table_cols.adoc
@@ -49,6 +49,10 @@ include::partials/run.adoc[]
 -------------------------------------------------------------------------------------------------
 ----
 
+=== Примеры
+
+include::partials/table-cols.adoc[]
+
 NOTE: Путь может быть как абсолютным, так и относительным.
 
 == Принцип работы Analyzer
