--- a/docs/README_terms.adoc
+++ b/docs/README_terms.adoc
@@ -67,3 +67,7 @@ include::partials/run.adoc[]
                                          {help-cont}
 -------------------------------------------------------------------------------------------------
 ----
+
+=== Примеры
+
+include::../sources/samples.txt[]
