--- a/README.adoc
+++ b/README.adoc
@@ -1,10 +1,30 @@
 = Руководство пользователя
+:asciidoctorconfigdir: .
 :imagesdir: docs/images
-:stylesdir: css
-:stylesheet: general.css
+:stylesdir: ./css
+:stylesheet: default.css
 :pdf-themesdir: themes
 :pdf-theme: base-theme.yml
-:asciidoctorconfigdir: .
+:experimental:
+:icons: font
+:source-highlighter: rouge
+:figure-caption: Рисунок
+:nofooter:
+:toc-title: Содержание
+:sectnums:
+:name: tw_utilities.exe
+:recursive: --recursive / --no-recursive           Флаг рекурсивного поиска файлов.
+:recursive-note: По умолчанию: True, вложенные файлы учитываются
+:keep-logs: --keep-logs                            Флаг сохранения директории с лог-файлом по завершении
+:keep-logs-cont: работы в штатном режиме.
+:keep-logs-default: По умолчанию: False, лог-файл и директория удаляются
+:help: -h, --help                             Вывести справочную информацию на экран и завершить
+:help-cont: работу
+:sb: ../SB/content/common/
+:mme: ../MME/content/common/
+:pcrf: ../PCRF/content/common/
+ifdef::backend-html5[:toc: right]
+ifdef::env-idea[toc:auto]
 
 == Общая информация
 
