--- a/docs/README_format_code.adoc
+++ b/docs/README_format_code.adoc
@@ -52,3 +52,7 @@ include::partials/run.adoc[]
 ----
 
 NOTE: Путь может быть как абсолютным, так и относительным.
+
+=== Примеры
+
+include::partials/format-code.adoc[]
