--- a/docs/README_list_files.adoc
+++ b/docs/README_list_files.adoc
@@ -14,31 +14,6 @@
 
 В результате отображается список всех файлов, удовлетворяющих требованиям фильтра.
 
-[source,console]
-----
-Файлы в директории C:\Users\tarasov-a\PycharmProjects\Protei_MME\content\common\logging\:
-- content/common/logging/edr/connect.en.adoc
-- content/common/logging/edr/dedicated_bearer.en.adoc
-- content/common/logging/edr/diam.en.adoc
-- content/common/logging/edr/enodeb.en.adoc
-- content/common/logging/edr/error_code.en.adoc
-- content/common/logging/edr/gtp_c.en.adoc
-- content/common/logging/edr/gtp_c_overload.en.adoc
-- content/common/logging/edr/http.en.adoc
-- content/common/logging/edr/irat_handover.en.adoc
-- content/common/logging/edr/lte_handover.en.adoc
-- content/common/logging/edr/paging.en.adoc
-- content/common/logging/edr/reject.en.adoc
-- content/common/logging/edr/s1ap.en.adoc
-- content/common/logging/edr/s1ap_context.en.adoc
-- content/common/logging/edr/s1ap_overload.en.adoc
-- content/common/logging/edr/sgsap.en.adoc
-- content/common/logging/edr/sgsap_overload.en.adoc
-- content/common/logging/edr/tau.en.adoc
-- content/common/logging/edr/_index.en.adoc
-- content/common/logging/_index.en.adoc
-----
-
 == Для чего нужно?
 
 Изначально скрипт написан для удобства создания файла `PDF_*.yml`, необходимого для генерации PDF. +
@@ -118,7 +93,11 @@ include::partials/run.adoc[]
                                          {keep-logs-default}
   {help}
                                          {help-cont}
--------------------------------------------------------------------------------------------------
+------------------------------------------------------------------------------------------------
 ----
 
 NOTE: Путь может быть как абсолютным, так и относительным.
+
+=== Примеры
+
+include::partials/list-files.adoc[]
