--- a/docs/README_validate_yaml.adoc
+++ b/docs/README_validate_yaml.adoc
@@ -57,3 +57,7 @@ include::partials/run.adoc[]
 ----
 
 NOTE: Путь может быть как абсолютным, так и относительным.
+
+=== Примеры
+
+include::partials/validate-yaml.adoc[]
