--- a/docs/README_format_code.adoc
+++ b/docs/README_format_code.adoc
@@ -38,7 +38,7 @@ include::partials/run.adoc[]
 
 Опции:
   -d, --dir DIR                          Директория для обработки
-  -f, --file FILE ... FILE               Файлов для обработки. Может использоваться несколько раз
+  -f, --file FILE ... FILE               Файлы для обработки. Может использоваться несколько раз
   -l, --length LEN                       Максимальная длина строки. По умолчанию: 84
                                          Примечание. Должно быть целым положительным числом
   {recursive}
