--- a/README.adoc
+++ b/README.adoc
@@ -37,6 +37,7 @@ ifdef::env-idea[toc:auto]
 [horizontal]
 link:docs/README_check_russian.adoc#check-russian[check-russian]:: команда для проверки наличия не переведенных слов в англоязычных файлах
 link:docs/README_convert_tables.adoc#convert-tables[convert-tables]:: команда для извлечения таблиц из файлов docx в формат Markdown
+link:docs/README_filter_images.adoc#filter-images[filter-images]:: команда для удаления неиспользуемых изображений
 link:docs/README_format_code.adoc#format-code[format-code]:: команда для форматирования блоков кода
 link:docs/README_link_repair.adoc#link-repair[link-repair]:: команда для исправления ссылок в проекте
 link:docs/README_list_files.adoc#list-files[list-files]:: команда для вывода файлов в директории с использованием ряда фильтров
@@ -85,6 +86,7 @@ list-files | check-russian | convert-tables | format-code | link-repair | reduce
   check-russian                          Команда для проверки наличия непереведенных слов
   convert-tables                         Команда для корректного извлечения таблиц из файлов
                                          docx в формат Markdown
+  filter-images                          Команда для удаления неиспользуемых изображений
   format-code                            Команда для форматирования блоков кода
   link-repair                            Команда для проверки и исправления ссылок в файлах
                                          документации
@@ -180,6 +182,8 @@ include::docs/partials/get_path.adoc[]
 include::docs/README_check_russian.adoc[]
 
 include::docs/README_convert_tables.adoc[]
+
+include::docs/README_filter_images.adoc[]
 
 include::docs/README_format_code.adoc[]
 
